# batch_downloader

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: build_docker_image.yml  rust-clippy.yml
docker/: production.dockerfile
scripts/: start.sh  start_production_taskiq.sh
src/: config.rs  main.py  main.rs  structures.rs  views.rs
src/app/: depends.py  serializers.py  views.py
src/app/services/: downloader.py  library_client.py  task_creator.py  task_manager.py
src/core/: app.py  config.py  taskiq_broker.py
src/services/: cache_client.rs  downloader.rs  files_cleaner.rs  library_client.rs  minio.rs  mod.rs  task_creator.rs  utils.rs
