[package]
name = "batch_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["compat", "io"] }
futures-core = "0.3.30"
futures-util = "0.3.30"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
sentry-tracing = "0.34.0"
tower-http = { version = "0.6.1", features = ["trace"] }

once_cell = "1.20.1"

axum = { version = "0.7.7", features = ["multipart"] }
axum-prometheus = "0.7.0"

serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

moka = { version = "0.12.8", features = ["future"] }

md5 = "0.7.0"

smallvec = { version = "1.13.2", features = ["serde"] }
smartstring = { version = "1.0.1", features = ["serde"] }
reqwest = { version = "0.12.8", features = ["json", "stream", "multipart"] }

bytes = "1.7.2"
tempfile = "3.13.0"
zip = "2.2.0"

base64 = "0.22.1"

async-stream = "0.3.6"

translit = "0.5.0"

sentry = { version = "0.34.0", features = ["debug-images"] }

chrono = "0.4.38"
