[package]
name = "batch_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["compat", "io"] }
futures-core = "0.3.31"
futures-util = "0.3.31"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
sentry-tracing = "0.35.0"
tower-http = { version = "0.6.2", features = ["trace"] }

once_cell = "1.20.2"

axum = { version = "0.7.9", features = ["multipart"] }
axum-prometheus = "0.7.0"

serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"

moka = { version = "0.12.8", features = ["future"] }

md5 = "0.7.0"

smallvec = { version = "1.13.2", features = ["serde"] }
smartstring = { version = "1.0.1", features = ["serde"] }
reqwest = { version = "0.12.9", features = ["json", "stream", "multipart"] }

bytes = "1.9.0"
tempfile = "3.14.0"
zip = "2.2.2"

base64 = "0.22.1"

async-stream = "0.3.6"

translit = "0.6.0"

sentry = { version = "0.35.0", features = ["debug-images"] }

chrono = "0.4.39"
