[package]
name = "batch_downloader"
version = "0.1.0"
edition = "2021"


[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = 'abort'

[profile.profiling]
inherits = "release"
debug = true
strip = false


[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["compat", "io"] }
futures-core = "0.3.31"
futures-util = "0.3.31"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
sentry-tracing = "0.41.0"
tower-http = { version = "0.6.2", features = ["trace"] }

once_cell = "1.21.1"

axum = { version = "0.8.1", features = ["multipart"] }
axum-prometheus = "0.8.0"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

moka = { version = "0.12.10", features = ["future"] }

md5 = "0.8.0"

smallvec = { version = "1.14.0", features = ["serde"] }
smartstring = { version = "1.0.1", features = ["serde"] }
reqwest = { version = "0.12.15", features = ["json", "stream", "multipart"] }

bytes = "1.10.1"
tempfile = "3.19.1"
zip = "4.2.0"

base64 = "0.22.1"

async-stream = "0.3.6"

translit = "0.6.0"

sentry = { version = "0.41.0", features = ["debug-images"] }

chrono = "0.4.40"
